added system defined playlist in the playlist response
